docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
ADD_IMPORT extern const cct BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018;
ADD_IMPORT extern const cct BOHR_MAGNETON_IN_K_T_2018;
ADD_IMPORT extern const cct BOHR_RADIUS_2018;
ADD_IMPORT extern const cct BOLTZMANN_CONSTANT_2018;
ADD_IMPORT extern const cct BOLTZMANN_CONSTANT_IN_EV_K_2018;
ADD_IMPORT extern const cct BOLTZMANN_CONSTANT_IN_HZ_K_2018;
ADD_IMPORT extern const cct BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018;
ADD_IMPORT extern const cct CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018;
ADD_IMPORT extern const cct CLASSICAL_ELECTRON_RADIUS_2018;
ADD_IMPORT extern const cct COMPTON_WAVELENGTH_2018;
ADD_IMPORT extern const cct CONDUCTANCE_QUANTUM_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_AMPERE_90_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_COULOMB_90_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_FARAD_90_2018;
ADD_IMPORT extern const cct CONVENTIONAL_VALUE_OF_HENRY_90_2018;