src/codata_constants_2018_capi.f90


type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018") ::&
capi_46_2018 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "i", "n", "v", &
"e", "r", "s", "e", " ", "m", "e", "t", "e", "r", &
" ", "p", "e", "r", " ", "t", "e", "s", "l", "a", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018%value, &
BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018%uncertainty, &
[ &
"m", "^", "-", "1", " ", "T", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_K_T_2018") ::&
capi_47_2018 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "K", "/", "T", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_K_T_2018%value, &
BOHR_MAGNETON_IN_K_T_2018%uncertainty, &
[ &
"K", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_RADIUS_2018") ::&
capi_48_2018 = capi_constant_type([ &
"B", "o", "h", "r", " ", "r", "a", "d", "i", "u", &
"s", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_RADIUS_2018%value, &
BOHR_RADIUS_2018%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_2018") ::&
capi_49_2018 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_2018%value, &
BOLTZMANN_CONSTANT_2018%uncertainty, &
[ &
"J", " ", "K", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_EV_K_2018") ::&
capi_50_2018 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "e", "V", "/", "K", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_EV_K_2018%value, &
BOLTZMANN_CONSTANT_IN_EV_K_2018%uncertainty, &
[ &
"e", "V", " ", "K", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_HZ_K_2018") ::&
capi_51_2018 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "H", "z", "/", "K", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_HZ_K_2018%value, &
BOLTZMANN_CONSTANT_IN_HZ_K_2018%uncertainty, &
[ &
"H", "z", " ", "K", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018") ::&
capi_52_2018 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "i", "n", "v", "e", "r", "s", "e", " ", &
"m", "e", "t", "e", "r", " ", "p", "e", "r", " ", &
"k", "e", "l", "v", "i", "n", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018%value, &
BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018%uncertainty, &
[ &
"m", "^", "-", "1", " ", "K", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018") ::&
capi_53_2018 = capi_constant_type([ &
"c", "h", "a", "r", "a", "c", "t", "e", "r", "i", &
"s", "t", "i", "c", " ", "i", "m", "p", "e", "d", &
"a", "n", "c", "e", " ", "o", "f", " ", "v", "a", &
"c", "u", "u", "m", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018%value, &
CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018%uncertainty, &
[ &
"o", "h", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CLASSICAL_ELECTRON_RADIUS_2018") ::&
capi_54_2018 = capi_constant_type([ &
"c", "l", "a", "s", "s", "i", "c", "a", "l", " ", &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "r", &
"a", "d", "i", "u", "s", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CLASSICAL_ELECTRON_RADIUS_2018%value, &
CLASSICAL_ELECTRON_RADIUS_2018%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="COMPTON_WAVELENGTH_2018") ::&
capi_55_2018 = capi_constant_type([ &
"C", "o", "m", "p", "t", "o", "n", " ", "w", "a", &
"v", "e", "l", "e", "n", "g", "t", "h", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
COMPTON_WAVELENGTH_2018%value, &
COMPTON_WAVELENGTH_2018%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONDUCTANCE_QUANTUM_2018") ::&
capi_56_2018 = capi_constant_type([ &
"c", "o", "n", "d", "u", "c", "t", "a", "n", "c", &
"e", " ", "q", "u", "a", "n", "t", "u", "m", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONDUCTANCE_QUANTUM_2018%value, &
CONDUCTANCE_QUANTUM_2018%uncertainty, &
[ &
"S", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_AMPERE_90_2018") ::&
capi_57_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "a", "m", "p", "e", "r", "e", "-", "9", &
"0", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_AMPERE_90_2018%value, &
CONVENTIONAL_VALUE_OF_AMPERE_90_2018%uncertainty, &
[ &
"A", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_COULOMB_90_2018") ::&
capi_58_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "c", "o", "u", "l", "o", "m", "b", "-", &
"9", "0", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_COULOMB_90_2018%value, &
CONVENTIONAL_VALUE_OF_COULOMB_90_2018%uncertainty, &
[ &
"C", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_FARAD_90_2018") ::&
capi_59_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "f", "a", "r", "a", "d", "-", "9", "0", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_FARAD_90_2018%value, &
CONVENTIONAL_VALUE_OF_FARAD_90_2018%uncertainty, &
[ &
"F", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_HENRY_90_2018") ::&
capi_60_2018 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "h", "e", "n", "r", "y", "-", "9", "0", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_HENRY_90_2018%value, &
CONVENTIONAL_VALUE_OF_HENRY_90_2018%uncertainty, &
[ &
"H", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
